[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.txt

[tool:pytest]
addopts = -v --timeout=300 --cov=can --cov=scripts --cov-config=setup.cfg

[coverage:run]
branch = False # we could also use branch coverage
source =
    can
    scripts
omit =
    CAN.py # legacy code
exclude_lines =
    # Have to re-enable the standard pragma, see https://coverage.readthedocs.io/en/coverage-4.5.1a/config.html#syntax
    pragma: no cover

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:

[coverage:report]
precision = 2 # two digits after decimal point
show_missing = True
