[metadata]
license_file = LICENSE.txt

[mypy]
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
no_implicit_optional = True
disallow_incomplete_defs = True
warn_redundant_casts = True
warn_unused_ignores = True
exclude =
    (?x)(
    venv
    |^test
    |^setup.py$
    |^can/interfaces/__init__.py
    |^can/interfaces/etas
    |^can/interfaces/gs_usb
    |^can/interfaces/ics_neovi
    |^can/interfaces/iscan
    |^can/interfaces/ixxat
    |^can/interfaces/kvaser
    |^can/interfaces/nican
    |^can/interfaces/neousys
    |^can/interfaces/pcan
    |^can/interfaces/serial
    |^can/interfaces/slcan
    |^can/interfaces/socketcan
    |^can/interfaces/systec
    |^can/interfaces/udp_multicast
    |^can/interfaces/usb2can
    |^can/interfaces/virtual
    )
